--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 
       auth.signInWithEmailAndPassword(email, password)
         .then(() => {
-          window.location.href = "index.html";
+          window.location.href = "register.html";
         })
         .catch(error => {
           console.log("Error: " + error.message);
@@ -262,7 +262,7 @@
 
           });
           alert("Registration successful!");
-          window.location.href = "index.html";
+          window.location.href = "register.html";
           // window.location.href = "profile.html";
         } catch (error) {
           console.log("Error: " + error.message);
