--- a/create.html
+++ b/create.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
     <title>Dynamic Resume Generator</title>
     <link rel="stylesheet" href="data.json">
     <link rel="stylesheet" href="create.css">
@@ -21,11 +20,9 @@
             <p>Welcome to the resume creation section! Here, you can add all your details to build your personalized
                 resume.
             </p>
-            <!-- Add additional content here -->
         </div>
 
         <div class="container">
-
             <div class="form-container" id="resumeFormContainer">
                 <h2>Enter Your Details</h2>
                 <form id="resumeForm">
@@ -42,7 +39,7 @@
                     <input type="text" id="contact" placeholder="Enter your contact details">
 
                     <label for="email">Email</label>
-                    <input type="email" placeholder="Enter your email">
+                    <input type="email" id="email" placeholder="Enter your email">
 
                     <label for="address">Address</label>
                     <input type="text" id="address" placeholder="Enter your address">
@@ -167,15 +164,15 @@
             </div>
         </div>
     </section>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
     <script>
-        let generatedResumeHTML = ''; // Store the generated HTML here
-        let resumeData = null; // Store fetched resume data
+        let generatedResumeHTML = '';
+        let resumeData = null;
 
         async function generateResume(event) {
             event.preventDefault();
 
-            // Fetch data from JSON file
             try {
                 const response = await fetch('data.json');
                 resumeData = await response.json();
@@ -185,6 +182,7 @@
                 return;
             }
 
+            // Get form values
             const name = document.getElementById("name").value;
             const jobTitle = document.getElementById("jobTitle").value;
             const contact = document.getElementById("contact").value;
@@ -208,17 +206,19 @@
             let projectLink = document.getElementById("projectLink").value;
             const projectImages = document.getElementById("projectImages").files;
 
-            // Add https:// if it's not already there
             if (projectLink && !projectLink.startsWith('https://') && !projectLink.startsWith('http://')) {
                 projectLink = 'https://' + projectLink;
             }
 
-            const profilePicURL = await new Promise((resolve, reject) => {
-                const reader = new FileReader();
-                reader.onload = () => resolve(reader.result);
-                reader.onerror = reject;
-                reader.readAsDataURL(profilePic);
-            });
+            let profilePicURL = "";
+            if (profilePic) {
+                profilePicURL = await new Promise((resolve, reject) => {
+                    const reader = new FileReader();
+                    reader.onload = () => resolve(reader.result);
+                    reader.onerror = reject;
+                    reader.readAsDataURL(profilePic);
+                });
+            }
 
             const skillsList = skills.split(',').map(skill => `<li>${skill.trim()}</li>`).join('');
             const hobbiesList = hobbies.split('\n').map(hobby => `<li>${hobby.trim()}</li>`).join('');
@@ -283,16 +283,16 @@
             });
 
             const languageListSorted = sortedLanguages.map(lang => `
-            <li>${lang.label}
-                <div class="language-dots">${getLanguageDots(lang.level)}</div>
-            </li>
-        `).join('');
+                <li>${lang.label}
+                    <div class="language-dots">${getLanguageDots(lang.level)}</div>
+                </li>
+            `).join('');
 
             generatedResumeHTML = `
                 <div class="resume-container">
                     <div class="top-section">
                         <div class="profile-image-container">
-                            <img src="${profilePicURL}" alt="Profile Picture">
+                            <img src="${profilePicURL ? profilePicURL : 'placeholder.jpg'}" alt="Profile Picture">
                         </div>
                         <div class="header-text">
                             <h1>${name}</h1>
@@ -345,6 +345,7 @@
 
             document.getElementById("resumeContent").innerHTML = generatedResumeHTML;
             document.getElementById("resumeContent").classList.add("visible");
+            document.getElementById("resumeContent").style.display = "block";
         }
 
         function getLanguageDots(level) {
@@ -388,7 +389,6 @@
                     orientation: 'portrait'
                 }
             }).then(() => {
-                // Remove the background gradient class after PDF is generated
                 resumeContent.classList.remove('pdf-background-gradient');
             });
         }
