--- a/create.html
+++ b/create.html
@@ -15,6 +15,8 @@
 
 <body>
     <section class="create">
+        
+        <a href="register.html"><button class="btns">BACK</button></a>
         <div id="resume-section" class="resume-section">
             <h2>Interactive Resume Creator</h2>
             <p>Welcome to the resume creation section! Here, you can add all your details to build your personalized
@@ -74,7 +76,7 @@
                             </div>
                             <div class="language-checkbox-item">
                                 <input type="checkbox" id="lang_es" name="languages" value="es">
-                                <label for="lang_es">Spanish</label>
+                                <label for="lang_es">Urdu</label>
                                 <select id="level_es" class="language-level-select">
                                     <option value="basic">Basic</option>
                                     <option value="conversational">Conversational</option>
@@ -84,7 +86,7 @@
                             </div>
                             <div class="language-checkbox-item">
                                 <input type="checkbox" id="lang_fr" name="languages" value="fr">
-                                <label for="lang_fr">French</label>
+                                <label for="lang_fr">Tamil</label>
                                 <select id="level_fr" class="language-level-select">
                                     <option value="basic">Basic</option>
                                     <option value="conversational">Conversational</option>
@@ -105,7 +107,7 @@
 
                             <div class="language-checkbox-item">
                                 <input type="checkbox" id="lang_ru" name="languages" value="ru">
-                                <label for="lang_ru">Russian</label>
+                                <label for="lang_ru">Hindi</label>
                                 <select id="level_ru" class="language-level-select">
                                     <option value="basic">Basic</option>
                                     <option value="conversational">Conversational</option>
